fdo#73217  : Textbox with picture fill are rendered and saved properly.

- Bitmap url was not stored propertly for textframes.
   - Exported background image fill for text box properly.
   - Added unit test.

Change-Id: I1fbab24b2a83b22be04fd6950c80ddf274436738